--- a/styles/style.css
+++ b/styles/style.css
@@ -170,3 +170,107 @@ padding: 0px 40px;
   padding: 9px;
   border-radius: 50%;
 }
+
+
+.popular-destinations{
+  width: 100%;
+  padding: 20px 100px;
+  display: flex;
+  gap: 20px;
+  flex-direction: column;
+  h1{
+    font-family: salin-regular;
+    color: rgb(46, 46, 46);
+  }
+}
+.popular-destinations-images-section{
+  width: 100%;
+  display: flex;
+ 
+  gap: 30px;
+}
+.popular-destinations-image-box{
+  width: calc(100% / 4);
+  height: 40vh;
+   border-radius: 20px;
+  /* background-color: aliceblue; */
+  display: flex;
+  cursor: pointer;
+  align-items: end;
+transition: all 1s;
+
+}
+.cities-box-2{
+display: flex;
+gap: 20px;
+
+
+flex-direction: column;
+div{
+  border-radius: 20px;
+}
+}
+.big-box{
+width: 100%;
+display: flex;
+  align-items: end;
+height: 55%;
+}
+.small-box{
+  width: 100%;display: flex;
+  align-items: end;
+
+height: 45%;
+}
+.city-1{
+  background-image: url(/cities/spain.jpg);
+  background-position: center;
+  background-size: cover;
+}
+.city-2{
+  background-image: url(/cities/london.jpg);
+  background-position: center;
+  background-size: cover;
+}
+.city-3{
+  background-image: url(/cities/lisbon.jpg);
+  background-position: center;
+  background-size: cover;
+}
+.city-4{
+  background-image: url(/cities/croatia.jpg);
+  background-position: center;
+  background-size: cover;
+}
+.city-5{
+  background-image: url(/cities/bratilva.jpg);
+  background-position: center;
+  background-size: cover;
+}
+.city-6{
+  background-image: url(/cities/copenhangen.jpg);
+  background-position: center;
+  background-size: cover;
+}
+.city-tag{
+  padding: 5px 18px;
+  background-color: rgba(255, 255, 255, 0.726);
+  display: inline-block;
+  font-family: salin-regular;
+  border-radius: 30px;
+  margin-bottom: 15px;
+  margin-left: 15px;
+
+}
+
+
+.popular-destinations-image-box:hover{
+  background-size: 102%;
+  
+}
+.big-box:hover{
+ background-size: 102%;
+}
+.small-box:hover{
+ background-size: 102%;
+}
